<resources>
    <string name="app_name">TrueCast</string>

    <string name="action_settings">Settings</string>
    <string name="intro_text">With Truecast, you can share what you see on your Android device.</string>
    <string name="session_text">Just start a session and share the support key with someone at the Truecast Web Application.</string>
    <string name="start_session_btn">Start a Session</string>
    <string name="title_activity_wait">Wait</string>
    <string name="text_wait">Share the support key with someone at the Turecast Web Application</string>
    <string name="title_activity_session">Session</string>
    <string name="text_insession">Screen sharing has started!</string>
    <string name="text_leave">You can now leave this app and show what you want to share.</string>
    <string name="stop_session_btn">Stop Sharing</string>
</resources>
