<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minHeight="40dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:background="@drawable/background"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/intro_text"
            android:id="@+id/textView"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="20dp"
            android:textColor="#ff55a6b4"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/session_text"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="20dp"
            android:textColor="#ff55a6b4"
            android:textStyle="bold"
            android:gravity="center"/>

        <Button
            android:layout_marginTop="30dp"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/start_session_btn"
            android:minHeight="60dp"
            android:textSize="18dp"
            android:id="@+id/button"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:background="#ff55a7b2"
            android:gravity="center"/>


    </LinearLayout>

</RelativeLayout>
